@@ -1,11 +1,14 @@
 procps-3.2.1 --> procps-3.2.2
 
+move striping from install command to CFLAGS
 now using gcc -fweb and -frename-registers options
 avoid warning about -lncurses when not linking -- thanks FLWM
+watch: allow sub-second intervals -- thanks Thomas Stewart
 ps: personality-specific -x support (HP-UX and SVR4-MP)
 ps: k option, same as --sort
 vmstat: fixed -d
 top: try to handle terminals lacking rmam and smam     #235003
+top: xterm dislikes clear-to-eol at eol (char lost)
 top: tolerate sparse CPU numbering
 
 procps-3.2.0 --> procps-3.2.1
